# quantitative_trading_system

./: .gitignore  project_rules.md  quantitative_trading_system.md
quantitative_trading_system/: .gitignore  INVESTMENT_FRAMEWORK.md  README.md  config.json  main.py  pyproject.toml  requirements.txt  setup.py
quantitative_trading_system/backtesting/: __init__.py  backtester.py  engine.py  reporter.py
quantitative_trading_system/config/: system_config.py
quantitative_trading_system/docs/: wind_db_schema.md  财汇金融数据库结构说明.chm
quantitative_trading_system/execution/: exchange_execution.py  order_manager.py
quantitative_trading_system/factors/: __init__.py  base.py  growth.py  profitability.py  registry.py  technical.py  valuation.py
quantitative_trading_system/indicators/: __init__.py  base.py  breadth_indicators.py  market_regime.py  momentum_indicators.py  pattern_indicators.py  registry.py  technical_framework.py  trend_indicators.py  volatility_indicators.py  volume_indicators.py
quantitative_trading_system/jobs/: daily_market_summary.py  daily_unified_job.py  run_dl_prediction.py  scheduler_app.py  setup_startup.bat  setup_startup_task.bat  stock_screener_v2_scheduled.py
quantitative_trading_system/ml/: __init__.py  train_model.py  train_wind.py
quantitative_trading_system/performance/: performance_calculator.py
quantitative_trading_system/risk/: __init__.py  manager.py  risk_controller.py
quantitative_trading_system/selection/: __init__.py  config.py  scanner.py  strategies.yml
quantitative_trading_system/signals/: __init__.py  models.py  (+2 more)
(+44 files in other folders)
